Html / CSS + ReadMe file updated

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+      <link rel="stylesheet" href="Site.css">
 </head>
 <body>
-    
+    <div class="topnav">
+  <a class="active" href="index.html">Taniti</a>
+  <a href="sites.html">Sites</a>
+  <a href="travel.html">Travel</a>
+  <a href="lodging.html">Lodging</a>
+  <a href="seetaniti.html">See Taniti</a>
+
+</div>
+    <div class="center">
+      <h1 style="text-align: center">Taniti Island</h1>
+    </div>
+    <div class="center">      
+      <h2>Plan your getaway to the island of Taniti</h2>
+    </div>
 </body>
 </html>
