--- a/seetaniti.html
+++ b/seetaniti.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="Site.css">
 </head>
 <body>
-    
+        <div class="topnav">
+  <a href="index.html">Taniti</a>
+  <a href="sites.html">Sites</a>
+  <a href="travel.html">Travel</a>
+  <a href="lodging.html">Lodging</a>
+  <a class="active" href="seetaniti.html">See Taniti</a>
+
+</div>
 </body>
 </html>
