--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     crossorigin="anonymous">
 
 </head>
-<body>
-    <div class="my-container">
-    <img src="palmtree-and-sandy-beach.jpg">
+<body style="background-image: url(palmtree-and-sandy-beach-filtered.jpg)">
+    <div>
        <header></header>
-       <div class="opacitynone">
         <nav class="navbar sticky-top navbar-dark bg-light">
             <div class="container">
                <a class="text-dark" href="index.html">Taniti</a>
@@ -36,12 +34,25 @@
         </nav>
          <div>
              <center>
-                  <h1>Taniti Island</h1>
-                  <h2>Plan your getaway to the island of Taniti</h2>
+                  <h1 style="padding-top: 5%; color: white">Taniti Island</h1>
+                  <h2 style="padding-top: 5%; color: white">Plan your getaway to the island of Taniti</h2>
               </center>
         </div>
+            <div class="row">
+              <div class="col-sm" style="padding-top: 5%;">
+                  <p style="font-size: 24px; font-weight: bold; color:white">Taniti Island is a place where your vacation dreams come true.  See what all the island has to offer.</p>
+                      <button class="btn btn-primary"><a class="text-dark" href="sites.html">Learn More >></a></button>
+              </div>
+              <div class="col-sm" style="padding-top: 5%;">
+                  <p style="font-size: 24px; font-weight: bold; color: white">With more travel options available, it's now easier than ever to navigate your way to paradise</p>
+                  <button class="btn btn-primary"><a class="text-dark" href="travel.html">Learn More >></a></button>
+              </div>
+              <div class="col-sm" style="padding-top: 5%;">
+                  <p style="font-size: 24px; font-weight: bold; color: white">There are many options for lodging.  From easily affordable hotels to 5 star resorts.  Book your stay now.</p>
+                  <button class="btn btn-primary"><a class="text-dark" href="lodging.html">Learn More >></a></button>
+              </div>
+            </div>
     </div> 
-  </div>
    
 </body>
 </html>
