--- a/travel.html
+++ b/travel.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="Site.css">
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
 </head>
 <body>
-        <div class="topnav">
-  <a href="index.html">Taniti</a>
-  <a href="sites.html">Sites</a>
-  <a class="active"href="travel.html">Travel</a>
-  <a href="lodging.html">Lodging</a>
-  <a href="seetaniti.html">See Taniti</a>
-
-</div>
+<nav class="navbar sticky-top navbar-dark bg-light">
+            <div class="container">
+               <a class="text-dark" href="index.html">Taniti</a>
+                   <center>
+                     <ul class="nav nav-pills">
+                        <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                            <a class="text-dark" href="sites.html">Sites</a>
+                        </li>
+                        <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                             <a class="text-dark" href="travel.html">Travel</a>
+                        </li>
+                        <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                             <a class="text-dark" href="lodging.html">Lodging</a>
+                        </li>
+                        <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                             <a class="text-dark" href="seetaniti.html">See Taniti</a>
+                        </li>
+                     </ul>
+                  </center>
+            </div>
+        </nav>
 </body>
 </html>
