Sites and Travel Page Done for prototype, Started Loding Page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </center>
         </div>
             <div class="row">
-              <div class="col-sm" style="padding-top: 5%;">
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                   <p style="font-size: 24px; font-weight: bold; color:white">Taniti Island is a place where your vacation dreams come true.  See what all the island has to offer.</p>
                       <button class="btn btn-primary"><a class="text-dark" href="sites.html">Learn More >></a></button>
               </div>
