--- a/sites.html
+++ b/sites.html
@@ -7,8 +7,10 @@
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
 </head>
-<body>
-<nav class="navbar sticky-top navbar-dark bg-light">
+<body style="background-image: url(palmtree-and-sandy-beach-filtered.jpg)">
+   <div>
+       <header></header>
+        <nav class="navbar sticky-top navbar-dark bg-light">
             <div class="container">
                <a class="text-dark" href="index.html">Taniti</a>
                    <center>
@@ -29,5 +31,36 @@
                   </center>
             </div>
         </nav>
+         <div>
+             <center>
+                  <h1 style="padding-top: 5%; color: white">Beaches, Restaurants And So Much More</h1>
+              </center>
+        </div>
+            <div class="row">
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
+                  <h4 style="font-size: 24px; font-weight: bold; color:white">Beaches and Entertainment</h4>
+                    <div>
+                     <img src="sandy-beach-with-rocks.jpg" alt="Sandy Beach" width="300" height="200" style="box-shadow: 5px 10px;" >
+                     </div>
+                     <p style="font-weight: bold; color: white; padding-top: 5px;">List of beaches and entertainment below here</p>
+
+              </div>
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
+                  <h4 style="font-size: 24px; font-weight: bold; color:white">Restaurants</h4>
+                    <div>
+                     <img src="pan-asian-cuisine.jpg" alt="Pan Asian Cuisine" width="300" height="200" style="box-shadow: 5px 10px;">
+                     </div>
+                     <p style="font-weight: bold; color: white; padding-top: 5px;">List of restaurants below here</p>
+            </div>
+
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
+                  <h4 style="font-size: 24px; font-weight: bold; color:white">Stores and More</h4>
+                    <div>
+                     <img src="24-hour-convenient-store.jpg" alt="Convenient Store" width="300" height="200" style="box-shadow: 5px 10px;">
+                     </div>
+                     <p style="font-weight: bold; color: white; padding-top: 5px;">List of stores and more below here</p>
+            </div>
+    </div>
+    </div>   
 </body>
 </html>
