--- a/travel.html
+++ b/travel.html
@@ -7,8 +7,10 @@
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
 </head>
-<body>
-<nav class="navbar sticky-top navbar-dark bg-light">
+<body style="background-image: url(palmtree-and-sandy-beach-filtered.jpg)">
+   <div>
+       <header></header>
+        <nav class="navbar sticky-top navbar-dark bg-light">
             <div class="container">
                <a class="text-dark" href="index.html">Taniti</a>
                    <center>
@@ -29,5 +31,36 @@
                   </center>
             </div>
         </nav>
+         <div>
+             <center>
+                  <h1 style="padding-top: 5%; color: white">Make Your Travel Plans Now</h1>
+              </center>
+        </div>
+            <div class="row">
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
+                  <h4 style="font-size: 24px; font-weight: bold; color:white">Flights</h4>
+                    <div>
+                     <img src="new-airport-plans.jpg" alt="New Airport Plans" width="300" height="200" style="box-shadow: 5px 10px;" >
+                     </div>
+                     <p style="font-weight: bold; color: white; padding-top: 5px;">Information about flights and airport below</p>
+
+              </div>
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
+                  <h4 style="font-size: 24px; font-weight: bold; color:white">Cruise</h4>
+                    <div>
+                     <img src="small-cruise-ship.jpg" alt="Small Cruise Ship" width="300" height="200" style="box-shadow: 5px 10px;">
+                     </div>
+                     <p style="font-weight: bold; color: white; padding-top: 5px;">Information about cruises below</p>
+            </div>
+
+              <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
+                  <h4 style="font-size: 24px; font-weight: bold; color:white">Car Rental</h4>
+                    <div>
+                     <img src="car-rental.jpg" alt="Car Rental" width="300" height="200" style="box-shadow: 5px 10px;">
+                     </div>
+                     <p style="font-weight: bold; color: white; padding-top: 5px;">Information about car rental below</p>
+            </div>
+    </div>
+    </div>   
 </body>
 </html>
