Enlarged Images in separate window complete

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <button class="btn btn-primary"><a class="text-dark" href="travel.html">Learn More >></a></button>
               </div>
               <div class="col-sm" style="padding-top: 5%;">
-                  <p style="font-size: 24px; font-weight: bold; color: white">There are many options for lodging.  From easily affordable hotels to 5 star resorts.  Book your stay now.</p>
+                  <p style="font-size: 24px; font-weight: bold; color: white">There are many options for lodging.  From easily affordable hotels to a 4 star resort.  </p>
                   <button class="btn btn-primary"><a class="text-dark" href="lodging.html">Learn More >></a></button>
               </div>
             </div>
