--- a/lodging.html
+++ b/lodging.html
@@ -164,7 +164,7 @@
         else if(lodgeSelection.toLowerCase() == 'hotel'){
             lodgeString += 'Taniti has many hotels to choose from. '
             document.getElementById('lodge-img-1').src = 'hotel-interior.jpg';
-            document.getElementById('caption1').innerHTML = 'Comfortable Beds';
+            document.getElementById('caption1').innerHTML = 'Comfortable Rooms';
             document.getElementById('lodge-img-2').src = 'hotel-pool.jpg';
             document.getElementById('caption2').innerHTML = 'Multi-Family Size Pools'
             document.getElementById('lodge-img-3').src = 'hotel-room-service.jpg';
