--- a/lodging.html
+++ b/lodging.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="Site.css">
+      <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+
+<!--
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
+-->
 
 </head>
 <body style="background-image: url(palmtree-and-sandy-beach-filtered.jpg)">
@@ -97,6 +101,8 @@
    </form>
   </div>
  </form>
+      <p id="price" style="font-weight: bold; color: white"></p>
+
 </div>
 <div class="col-sm" style="padding-top: 5%;">
   <p style="font-size: 24px; font-weight: bold; color: white">Explore your lodging options on Taniti</p>
@@ -108,7 +114,6 @@
   <p id="caption2" style="font-weight: bold; color: white"></p><br>
   <img id="lodge-img-3"><br>
   <p id="caption3" style="font-weight: bold; color: white"></p><br>
-  <p id="price" style="font-weight: bold; color: white"></p>
 </div>
 </div>
 <script>
