--- a/seetaniti.html
+++ b/seetaniti.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="Site.css">
-          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-        <script type="text/javascript" src="scripts.js"></script>
+      <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+
+<!--          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">-->
 </head>
 <body style="background-image: url(palmtree-and-sandy-beach-filtered.jpg)">
 <nav class="navbar sticky-top navbar-dark bg-light">
@@ -38,27 +39,21 @@
             <div class="row">
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                     <div><!---->
-                    <a id="boy-with-shark" class="pictures">  <!-- href="enlargeimage.html" -->
-                     <img id="boy-shark" src="local-boy-holding-shark.jpg" alt="Boy holding shark" width="300" height="200" style="box-shadow: 5px 10px;" onclick="DisplayImage(id)">
-                     </a>
+                     <img class="pictures" id="boy-shark" src="local-boy-holding-shark.jpg" alt="Boy holding shark" width="300" height="200" style="box-shadow: 5px 10px;" onclick="DisplayImage(id)">
                      </div>
                      <p style="font-weight: bold; color: white; padding-top: 5px;">History of the locals below</p>
 
               </div>
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                     <div>
-                    <a id="helicopter-over-island" class="pictures">
-                     <img id="helicopter" src="helicopter-over-island.jpg" alt="Man holding fish" width="300" height="200" style="box-shadow: 5px 10px;">
-                        </a>
+                     <img class="pictures" id="helicopter" src="helicopter-over-island.jpg" alt="Man holding fish" width="300" height="200" style="box-shadow: 5px 10px;">
                      </div>
                      <p style="font-weight: bold; color: white; padding-top: 5px;">Information about helicopter rides</p>
             </div>
 
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                     <div>
-                    <a id="volcano" class="pictures">
-                     <img id="volcano-erupting" src="valcano-erupting.jpg" alt="Volcano" width="300" height="200" style="box-shadow: 5px 10px;">
-                        </a>
+                     <img class="pictures" id="volcano-erupting" src="valcano-erupting.jpg" alt="Volcano" width="300" height="200" style="box-shadow: 5px 10px;">
                      </div>
                      <p style="font-weight: bold; color: white; padding-top: 5px;">Information about the volcano on the island</p>
             </div>
@@ -66,27 +61,21 @@
         <div class="row">
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                     <div>
-                    <a id="pub" class="pictures">
-                     <img id="local-pub" src="local-pub.jpg" alt="Local Pub" width="300" height="200" style="box-shadow: 5px 10px;" >
-                     </a>
+                     <img class="pictures" id="local-pub" src="local-pub.jpg" alt="Local Pub" width="300" height="200" style="box-shadow: 5px 10px;" >
                      </div>
                      <p style="font-weight: bold; color: white; padding-top: 5px;">Information about local bars</p>
 
               </div>
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                     <div>
-                    <a id="harbor" class="pictures">
-                     <img id="tropical-harbor" src="tropical-harbor.jpg" alt="Man holding fish" width="300" height="200" style="box-shadow: 5px 10px;">
-                        </a>
+                     <img class="pictures" id="tropical-harbor" src="tropical-harbor.jpg" alt="Man holding fish" width="300" height="200" style="box-shadow: 5px 10px;">
                      </div>
                      <p style="font-weight: bold; color: white; padding-top: 5px;">Information about the harbor</p>
             </div>
 
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                     <div>
-                    <a id="club" class="pictures">
-                     <img id="night-club" src="night-club.jpg" alt="Night Club" width="300" height="200" style="box-shadow: 5px 10px;">
-                        </a>
+                     <img class="pictures" id="night-club" src="night-club.jpg" alt="Night Club" width="300" height="200" style="box-shadow: 5px 10px;">
                      </div>
                      <p style="font-weight: bold; color: white; padding-top: 5px;">Information about Night Life</p>
             </div>
