Fixed Grammatical error on Lodging Page

--- a/lodging.html
+++ b/lodging.html
@@ -107,7 +107,7 @@
 <div class="col-sm" style="padding-top: 5%;">
   <p style="font-size: 24px; font-weight: bold; color: white">Explore your lodging options on Taniti</p>
   <p id="lodge-content" style="color:white; font-weight: bold;">With a variety of lodging options available on the island, 
-  there a place for everyone no matter their budget.</p><br>
+  there's a place for everyone no matter their budget.</p><br>
   <img id="lodge-img-1"><br>
   <p id="caption1" style="font-weight: bold; color: white"></p><br>
   <img id="lodge-img-2"><br>
