User Review Changes Implemented

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
        <header></header>
         <nav class="navbar sticky-top navbar-dark bg-light">
             <div class="container">
-               <a class="text-dark" href="index.html">Taniti</a>
+               <a class="text-dark" href="index.html">Home</a>
                    <center>
                      <ul class="nav nav-pills">
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
-                            <a class="text-dark" href="sites.html">Sites</a>
+                            <a class="text-dark" href="thingstodo.html">Things To Do</a>
                         </li>
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
                              <a class="text-dark" href="travel.html">Travel</a>
@@ -28,6 +28,9 @@
                         </li>
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
                              <a class="text-dark" href="seetaniti.html">See Taniti</a>
+                        </li>
+                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                             <a class="text-dark" href="contact.html">Contact</a>
                         </li>
                      </ul>
                   </center>
@@ -42,7 +45,7 @@
             <div class="row">
               <div class="col-sm" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
                   <p style="font-size: 24px; font-weight: bold; color:white">Taniti Island is a place where your vacation dreams come true.  See what all the island has to offer.</p>
-                      <button class="btn btn-primary"><a class="text-dark" href="sites.html">Learn More >></a></button>
+                      <button class="btn btn-primary"><a class="text-dark" href="thingstodo.html">Learn More >></a></button>
               </div>
               <div class="col-sm" style="padding-top: 5%;">
                   <p style="font-size: 24px; font-weight: bold; color: white">With more travel options available, it's now easier than ever to navigate your way to paradise</p>
