--- a/seetaniti.html
+++ b/seetaniti.html
@@ -12,11 +12,11 @@
 <body style="background-image: url(palmtree-and-sandy-beach-filtered.jpg)">
 <nav class="navbar sticky-top navbar-dark bg-light">
             <div class="container">
-               <a class="text-dark" href="index.html">Taniti</a>
+               <a class="text-dark" href="index.html">Home</a>
                    <center>
                      <ul class="nav nav-pills">
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
-                            <a class="text-dark" href="sites.html">Sites</a>
+                            <a class="text-dark" href="thingstodo.html">Things To Do</a>
                         </li>
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
                              <a class="text-dark" href="travel.html">Travel</a>
@@ -26,6 +26,9 @@
                         </li>
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
                              <a class="text-dark" href="seetaniti.html">See Taniti</a>
+                        </li>
+                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                             <a class="text-dark" href="contact.html">Contact</a>
                         </li>
                      </ul>
                   </center>
@@ -84,22 +87,22 @@
     var h= screen.height;
 var w= screen.width;
 document.getElementById('boy-shark').onclick=function(){
-window.open('local-boy-holding-shark.jpg', '_blank' , 'width='+w+', height='+h+'');
+window.open('local-boy-holding-shark.jpg', '_blank');
 }
 document.getElementById('helicopter').onclick=function(){
-window.open('helicopter-over-island.jpg', '_blank' , 'width='+w+', height='+h+'');
+window.open('helicopter-over-island.jpg', '_blank');
 }
 document.getElementById('volcano-erupting').onclick=function(){
-window.open('valcano-erupting.jpg', '_blank' , 'width='+w+', height='+h+'');
+window.open('valcano-erupting.jpg', '_blank');
 }
 document.getElementById('local-pub').onclick=function(){
-window.open('local-pub.jpg', '_blank' , 'width='+w+', height='+h+'');
+window.open('local-pub.jpg', '_blank');
 }
 document.getElementById('tropical-harbor').onclick=function(){
-window.open('tropical-harbor.jpg', '_blank' , 'width='+w+', height='+h+'');
+window.open('tropical-harbor.jpg', '_blank');
 }
 document.getElementById('night-club').onclick=function(){
-window.open('night-club.jpg', '_blank' , 'width='+w+', height='+h+'');
+window.open('night-club.jpg', '_blank');
 }
 
     </script>
