--- a/thingstodo.html
+++ b/thingstodo.html
@@ -14,11 +14,11 @@
        <header></header>
         <nav class="navbar sticky-top navbar-dark bg-light">
             <div class="container">
-               <a class="text-dark" href="index.html">Taniti</a>
+               <a class="text-dark" href="index.html">Home</a>
                    <center>
                      <ul class="nav nav-pills">
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
-                            <a class="text-dark" href="sites.html">Sites</a>
+                            <a class="text-dark" href="thingstodo.html">Things To Do</a>
                         </li>
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
                              <a class="text-dark" href="travel.html">Travel</a>
@@ -28,6 +28,9 @@
                         </li>
                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
                              <a class="text-dark" href="seetaniti.html">See Taniti</a>
+                        </li>
+                         <li class="nav-item" style="margin: 2px 30px 2px 30px;">
+                             <a class="text-dark" href="contact.html">Contact</a>
                         </li>
                      </ul>
                   </center>
